Removed guava (#115)